// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Shell Script Step input sets should not render 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div />
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Shell Script Step renders empty input sets 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div />
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Shell Script Step renders input sets 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="spec.source.spec.script-0"
        >
          <label
            class="bp3-label"
          >
            script
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="monacoWrapper"
            >
              <button
                class="bp3-button bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main expandBtn"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                  icon="fullscreen"
                >
                  <svg
                    data-icon="fullscreen"
                    height="10"
                    viewBox="0 0 16 16"
                    width="10"
                  >
                    <desc>
                      fullscreen
                    </desc>
                    <path
                      d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <textarea
                name="spec.source.spec.script"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="spec.executionTarget.host-1"
        >
          <label
            class="bp3-label"
          >
            targetHost
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-form-group"
              data-id="spec.executionTarget.host-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="spec.executionTarget.host"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="spec.executionTarget.connectorRef-3"
        >
          <label
            class="bp3-label"
            for="spec.executionTarget.connectorRef"
          >
            sshConnector
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main value"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="key-main"
                  style="height: 12px;"
                >
                  <svg
                    height="24"
                    width="24"
                  >
                    <g
                      fill="none"
                      stroke="#1C1C28"
                      stroke-width="0.5"
                    >
                      <path
                        d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                      />
                      <path
                        d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  createOrSelectSecret
                </span>
              </button>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="spec.executionTarget.workingDirectory-4"
        >
          <label
            class="bp3-label"
          >
            workingDirectory
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-form-group"
              data-id="spec.executionTarget.workingDirectory-5"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="spec.executionTarget.workingDirectory"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Shell Script Step renders runtime inputs 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="true"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--label"
          >
            basic
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="Accordion--details"
              data-testid="step-1-details"
            >
              <div
                class="formGroup md"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text InputWithIdentifier--idValue"
                          tabindex="0"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          >
                            ShellScript
                          </span>
                        </div>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      pipelineSteps.stepNameLabel
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          type="text"
                          value="SSH"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                >
                  <label
                    class="bp3-label"
                    for="spec.shell"
                  >
                    scriptType
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.shell"
                            placeholder="scriptType"
                            style="padding-right: 0px;"
                            type="text"
                            value="Bash"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup alignStart"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="spec.source.spec.script"
                  >
                    <div
                      class="formLabel"
                    >
                      script
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="monacoWrapper"
                    >
                      <button
                        class="bp3-button bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main expandBtn"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                          icon="fullscreen"
                        >
                          <svg
                            data-icon="fullscreen"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              fullscreen
                            </desc>
                            <path
                              d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <textarea
                        name="spec.source.spec.script"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group duration"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    pipelineSteps.timeoutLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value="10m"
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-2-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-2-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptInputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-4-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-4-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptOutputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-3-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-3-summary"
        >
          <div
            class="Accordion--label"
          >
            executionTarget
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Shell Script Step should render edit view 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="true"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--label"
          >
            basic
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="Accordion--details"
              data-testid="step-1-details"
            >
              <div
                class="formGroup md"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text InputWithIdentifier--idValue"
                          tabindex="0"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          >
                            ShellScript
                          </span>
                        </div>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      pipelineSteps.stepNameLabel
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          type="text"
                          value="SSH"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                >
                  <label
                    class="bp3-label"
                    for="spec.shell"
                  >
                    scriptType
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.shell"
                            placeholder="scriptType"
                            style="padding-right: 0px;"
                            type="text"
                            value="Bash"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup alignStart"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="spec.source.spec.script"
                  >
                    <div
                      class="formLabel"
                    >
                      script
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="monacoWrapper"
                    >
                      <button
                        class="bp3-button bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main expandBtn"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                          icon="fullscreen"
                        >
                          <svg
                            data-icon="fullscreen"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              fullscreen
                            </desc>
                            <path
                              d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <textarea
                        name="spec.source.spec.script"
                      >
                        test script
                      </textarea>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group duration"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    pipelineSteps.timeoutLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value="10m"
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-2-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-2-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptInputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-4-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-4-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptOutputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-3-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-3-summary"
        >
          <div
            class="Accordion--label"
          >
            executionTarget
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Shell Script Step should render edit view 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="true"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--label"
          >
            basic
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="Accordion--details"
              data-testid="step-1-details"
            >
              <div
                class="formGroup md"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text InputWithIdentifier--idValue"
                          tabindex="0"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          >
                            ShellScript
                          </span>
                        </div>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      pipelineSteps.stepNameLabel
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          type="text"
                          value="SSH"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                >
                  <label
                    class="bp3-label"
                    for="spec.shell"
                  >
                    scriptType
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.shell"
                            placeholder="scriptType"
                            style="padding-right: 0px;"
                            type="text"
                            value="Bash"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup alignStart"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="spec.source.spec.script"
                  >
                    <div
                      class="formLabel"
                    >
                      script
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="monacoWrapper"
                    >
                      <button
                        class="bp3-button bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main expandBtn"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                          icon="fullscreen"
                        >
                          <svg
                            data-icon="fullscreen"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              fullscreen
                            </desc>
                            <path
                              d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <textarea
                        name="spec.source.spec.script"
                      >
                        test script
                      </textarea>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group duration"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    pipelineSteps.timeoutLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value="10m"
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-2-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-2-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptInputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-4-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-4-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptOutputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-3-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-3-summary"
        >
          <div
            class="Accordion--label"
          >
            executionTarget
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Shell Script Step should render edit view as edit step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="true"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--label"
          >
            basic
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="Accordion--details"
              data-testid="step-1-details"
            >
              <div
                class="formGroup md"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text InputWithIdentifier--idValue"
                          tabindex="0"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          >
                            ShellScript
                          </span>
                        </div>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      pipelineSteps.stepNameLabel
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          type="text"
                          value="SSH"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                >
                  <label
                    class="bp3-label"
                    for="spec.shell"
                  >
                    scriptType
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.shell"
                            placeholder="scriptType"
                            style="padding-right: 0px;"
                            type="text"
                            value="Bash"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup alignStart"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="spec.source.spec.script"
                  >
                    <div
                      class="formLabel"
                    >
                      script
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="monacoWrapper"
                    >
                      <button
                        class="bp3-button bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main expandBtn"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                          icon="fullscreen"
                        >
                          <svg
                            data-icon="fullscreen"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              fullscreen
                            </desc>
                            <path
                              d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <textarea
                        name="spec.source.spec.script"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group duration"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    pipelineSteps.timeoutLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value="10m"
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-2-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-2-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptInputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-4-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-4-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptOutputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-3-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-3-summary"
        >
          <div
            class="Accordion--label"
          >
            executionTarget
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Shell Script Step should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Accordion--accordion accordion"
    >
      <div
        class="Accordion--panel"
        data-open="true"
        data-testid="step-1-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-1-summary"
        >
          <div
            class="Accordion--label"
          >
            basic
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
          style="height: auto; overflow-y: visible; transition: none;"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(0); transition: none;"
          >
            <div
              class="Accordion--details"
              data-testid="step-1-details"
            >
              <div
                class="formGroup md"
              >
                <div
                  class="InputWithIdentifier--txtNameContainer"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      ID
                      :
                    </p>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                          tabindex="0"
                        >
                          <span
                            class="bp3-editable-text-content"
                            style="height: 1px; line-height: 1px; min-width: 0;"
                          />
                        </div>
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main"
                      icon="edit"
                      style="vertical-align: middle;"
                    >
                      <svg
                        data-icon="edit"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="bp3-form-group"
                  >
                    <label
                      class="bp3-label"
                      for="name"
                    >
                      pipelineSteps.stepNameLabel
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="name"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                >
                  <label
                    class="bp3-label"
                    for="spec.shell"
                  >
                    scriptType
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="spec.shell"
                            placeholder="scriptType"
                            style="padding-right: 0px;"
                            type="text"
                            value="Bash"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup alignStart"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="spec.source.spec.script"
                  >
                    <div
                      class="formLabel"
                    >
                      script
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main btn"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="btnText"
                              >
                                inputTypes.FIXED
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="monacoWrapper"
                    >
                      <button
                        class="bp3-button bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main expandBtn"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                          icon="fullscreen"
                        >
                          <svg
                            data-icon="fullscreen"
                            height="10"
                            viewBox="0 0 16 16"
                            width="10"
                          >
                            <desc>
                              fullscreen
                            </desc>
                            <path
                              d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                      <textarea
                        name="spec.source.spec.script"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group duration"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    pipelineSteps.timeoutLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value="10m"
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-2-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-2-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptInputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-4-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-4-summary"
        >
          <div
            class="Accordion--label"
          >
            scriptOutputVariables
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
      <div
        class="Accordion--panel"
        data-open="false"
        data-testid="step-3-panel"
      >
        <div
          class="Accordion--summary"
          data-testid="step-3-summary"
        >
          <div
            class="Accordion--label"
          >
            executionTarget
          </div>
          <div
            class="Accordion--chevron"
          />
        </div>
        <div
          class="bp3-collapse Accordion--collapse"
        >
          <div
            aria-hidden="false"
            class="bp3-collapse-body"
            style="transform: translateY(-undefinedpx);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Shell Script Step should render inputSet view and test validation 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div />
    </form>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
